[package]
name = "RayBNN_DiffEq"
version = "0.1.0"
authors = ["Brosnan Yuen <brosnanyuen@gmail.com>"]
edition = "2021"
description = "Differential Equation Solver using GPUs, CPUs, and FPGAs via CUDA, OpenCL, and oneAPI"
readme = "README.md"
repository = "https://github.com/BrosnanYuen/RayBNN_DiffEq"
keywords = ["differential","math","equation","CUDA","OpenCL"]
license = "GPL-3.0-only"
categories = ["science"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
num = "0.4.1"
rayon = "1.7.0"
num-traits = "0.2.16"
half = { version = "2.3.1" , features = ["num-traits"] }

[dev-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
num = "0.4.1"
rayon = "1.7.0"
num-traits = "0.2.16"
half = { version = "2.3.1" , features = ["num-traits"] }

[build-dependencies]
arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
num = "0.4.1"
rayon = "1.7.0"
num-traits = "0.2.16"
half = { version = "2.3.1" , features = ["num-traits"] }


[lib]
name = "RayBNN_DiffEq"
path = "src/lib.rs"


[[example]]
name = "Linear_ODE"
path = "examples/Linear_ODE.rs"

